# agent-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/scripts/: profile_hotspots.py
{{cookiecutter.project_slug}}/src/app/: main.py
{{cookiecutter.project_slug}}/src/app/agents/: graph.py  state.py
{{cookiecutter.project_slug}}/src/app/agents/nodes/: planner.py  responder.py  tool_router.py
{{cookiecutter.project_slug}}/src/app/api/routers/: agent.py  health.py
{{cookiecutter.project_slug}}/src/app/api/schemas/: agent.py
{{cookiecutter.project_slug}}/src/app/chains/: __init__.py
{{cookiecutter.project_slug}}/src/app/chains/prompts/: planner_prompt.py
{{cookiecutter.project_slug}}/src/app/chains/tools/: __init__.py  db_tool.py  search_tool.py
{{cookiecutter.project_slug}}/src/app/core/: __init__.py  config.py  llm_factory.py
{{cookiecutter.project_slug}}/src/app/cython_modules/: __init__.py  runtime.py  scoring.pxd  scoring.pyx  scoring_fallback.py
{{cookiecutter.project_slug}}/src/app/services/: run_agent.py
{{cookiecutter.project_slug}}/tests/integration/: test_agent_api.py
{{cookiecutter.project_slug}}/tests/unit/: test_cython_parity.py  test_nodes.py  test_tool_node.py  test_tools.py
