[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.3.0",
	"langchain>=0.2.0",
	"langgraph>=0.2.0",
	"langchain-core>=0.2.0",
	"langchain-openai>=0.1.0",
	"langchain-anthropic>=0.1.0",
	"cython>=3.0.10",
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.0",
	"httpx>=0.27.0",
	"anyio>=4.4.0",
]

[tool.uv]
package = false

[tool.uv.scripts]
build-cython = "python setup.py build_ext --inplace"
test = "pytest -q"
run-api = "uvicorn app.main:app --app-dir src --reload --port 8000"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
